2016-01-26  Oliver Lemke  <olemke@core-dump.info>

	* typhon/arts/catalogues.py, typhon/arts/retrieval.py,
        typhon/arts/scattering.py, typhon/arts/sensor.py:

	Convert files from DOS line endings to proper Unix format.
	
2016-01-26  Oliver Lemke  <olemke@core-dump.info>

	* typhon/arts/xml/write.py (ARTSXMLWriter.write_xml):

	Add optional argument arraytype. Used for rare cases where an array can
	be empty and thus the type can not be derived from the elements
	automatically.

	* typhon/arts/catalogues.py (GasAbsLookup):

	Use explicit Array type Index for NonlinearSpecies.

	* KNOWN_ISSUES: Remove empty array issue.

2016-01-25  Oliver Lemke  <olemke@core-dump.info>

	* typhon/arts/xml/__init__.py (save),
	typhon/arts/xml/write.py (ARTSXMLWriter):

	Add support for writing ARTS binary files.

	* KNOWN_ISSUES:

	Added note that currently empty arrays can't be written.

2016-01-25  Oliver Lemke  <olemke@core-dump.info>

	* Typhon now supports reading binary ARTS XML files. (Sparse and
	SpeciesAuxData pending).

	* typhon/arts/xml/__init__.py:

	Open and pass binary file pointer to parse function if necessary.

	* typhon/arts/xml/read.py:

	(ARTSTypesLoadMultiplexer): Add keyword binaryfp. Implement reading
	from binary file where applicable.

	(ARTSElement): Add binaryfp attribute and pass it to
	ARTSTypesLoadMultiplexer.

	(parse): Create local copy of class ARTSElement and set binaryfp.

2016-01-21  Lukas Kluft <lukas.kluft@gmail.com>

	* doc/{modules.rst,utils.rst}: Included utils to documentation.

	* typhon/utils/latex.py:

	It is now possible to pass headings for table columns.

	Fixed multi-line example in docstring.

2016-01-15  Oliver Lemke  <olemke@core-dump.info>

	* typhon/__init__.py: With 0.1.0 out the door, moving on to 0.1.1.

2016-01-15  Oliver Lemke  <olemke@core-dump.info>

	* typhon/__init__.py: Increase version to 0.1.0.

2016-01-14  Lukas Kluft  <lukas.kluft@gmail.com>
